# ScinPho

./: .gitignore  LICENSE  README.md  pyproject.toml
src/ScinPho/: cli.py  sim.py
src/ScinPho.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
